src/components/Nav/Toolbar/Toolbar.css
@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');

.toolbar{
  width:100%;
  position:fixed;
  top:0;
  left:0;
  background-color: darkseagreen;
  height:50px;
}

.toolbar__navigation{
  display:flex;
  height:100%;
  align-items: center;
  padding:0 1rem;
}

.toolbar__logo{
  margin-left:1rem;
}

.toolbar__logo a{
  color:white;
  text-decoration: none;
  font-size: 1.5rem;
}

.spacer{
  flex:1
}

.toolbar__navitgation-items ul{
  list-style: none;
  margin:0;
  padding:0;
  display: flex;
  margin-right:1.5em;
}

.toolbar__navitgation-items li{
  padding: 0 0.5rem;
  font-size:1.25rem;
}

.toolbar__navitgation-items a{
  color: white;
  text-decoration: none;
}
.toolbar__navitgation-items a:hover,
.toolbar__navitgation-items a:active{
  color:#243c24;
}

@media(max-width:768px){
  .toolbar__navitgation-items{
    display: none;
  }
}
@media (min-width:769px) {
  .toolbar__toggle{
    display:none;
  }
}

.logo{
  height:2.5rem
}

